  * LevelColorsImageChannel() returns proper status (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24751).
  * Generate a proper SVG clipping path (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24752).
  * Return image moments with the identify -moments -verbose options.

2013-12-30  6.8.8-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.8-1, SVN revision 14087.

2013-12-27  6.8.8-1 Cristy  <quetzlzacatenango@image...>
  * Support points argument for draw MSL element.
  * Fix misplaced closing parenthesis for strncmp() call in magick/xml-tree.c.
  * The -page option now correctly sets the image page offset (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24701).

2013-12-26  6.8.8-1 Dirk Lemstra <dirk@snakeware...>
  * Added support for reading zip compressed PSD files. (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24676).

2013-12-25  6.8.8-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.8-0, SVN revision 14027.

2013-12-23  6.8.8-0 Cristy  <quetzlzacatenango@image...>
  * Blurring with transparency no longer returns a halo (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24665).
  * Eliminate ICC profile memory leak for JP2 coder (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=24679).

2012-12-21  6.8.8-0 Dirk Lemstra <dirk@snakeware...>
  * Made librsvg the default svg library for the windows distribution.

2013-12-10  6.8.7-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.7-10, SVN revision 13965.

2013-12-10  6.8.7-10  SiuChi Chan  <...>
  * Fix crash when using -resize with GPU acceleration (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=24603).

2013-12-08  6.8.7-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.7-9, SVN revision 13950.

2013-12-05  6.8.7-9  SiuChi Chan  <...>